--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>My</title>
     <script src="https://kit.fontawesome.com/2844c06905.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="/Demo Project/CSS/bootstrap.css">
-    <link rel="stylesheet" href="/Demo Project/CSS/style2.css">
+    <link rel="stylesheet" href="bootstrap.css">
+    <link rel="stylesheet" href="style2.css">
 
 </head>
 
